header + section presentation html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="./sass/main.css" rel="stylesheet">
+    <title>Ohmyfood</title>
 </head>
 <body>
-    <div class="test"></div>
+    <header>
+        <img src="./assets/images/logo/ohmyfood.png">
+    </header>
+    <main>
+        <div class="localisation">
+            <i><p>Paris, Belleville</p></i>
+        </div>
+        <section class="presentation">
+            <h1>Réservez le menu qui vous convient</h1>
+            <p>Découvrez des restaurants d'éxcepetion, selectionnés par nos soins</p>
+            <a href="#restaurants">Explorer nos restaurants</a>
+        </section>
+        <section class="fonctionnement">
+            <h2>Fonctionnement</h2>
+            
+
+        </section>
+    </main>
 </body>
 </html>
