--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <img src="./assets/images/logo/ohmyfood.png">
+        <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
     </header>
     <main>
         <div class="localisation">
@@ -113,15 +113,23 @@
         </section>
     </main>
     <footer>
-        <img src="./assets/images/logo/ohmyfood@2x.svg">
-        <i class="fa-solid fa-utensils"></i>
-        <p class="restaurant_partenaire">Proposer un restaurant</p>
-
-        <i class="fa-solid fa-handshake-angle"></i>
-        <p class="restaurant_partenaire">Devenir partenaire</p>
-        
-        <p>Mentions légales</p>
-        <p>Contact</p>
+        <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+        <ul>
+            <li>
+                <i class="fa-solid fa-utensils"></i>
+                <p class="restaurant_partenaire">Proposer un restaurant</p>
+            </li>
+            <li>
+                <i class="fa-solid fa-handshake-angle"></i>
+                <p class="restaurant_partenaire">Devenir partenaire</p>
+            </li>
+            <li>
+                <p>Mentions légales</p>
+            </li>
+            <li>
+                <p>Contact</p>
+            </li>
+        </ul>
     </footer>
 </body>
 
