--- a/restaurants pages/la_note_enchantee.html
+++ b/restaurants pages/la_note_enchantee.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,22 +15,23 @@
     <link href="./assets/css/style.css" rel="stylesheet">
     <title>La note enchantée</title>
 </head>
+
 <body>
     <header>
-        <img src="./assets/images/logo/ohmyfood.png">
-        <!--logo ou fleche en css-->
+        <i class="fa-solid fa-arrow-left"></i>
+        <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
     </header>
     <main>
         <img src="../assets/images/restaurants/La note enchantée.jpg" alt="Photo du restaurant La note enchantée">
         <section class="menu">
             <div class="conteneur_coeur">
-                <h2>À la française</h2> <!--quel h choisir en fonction du logo ou non-->
+                <h1>À la française</h1>
                 <i class="fa-regular fa-heart coeur_vide"></i>
                 <i class="fa-solid fa-heart coeur_plein"></i>
             </div>
 
             <div class="section_menu">
-                <h3>ENTRÉES</h3>
+                <h2>ENTRÉES</h2>
 
                 <article class="intitule_plat">
                     <div class="description_carte">
@@ -42,7 +44,7 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Caviar osciètre </h4>
+                        <h3>Caviar osciètre </h3>
                         <p>Sur blini à la farine de blé noir</p>
                     </div>
                     <span>35€</span>
@@ -51,7 +53,7 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Homard et espuma de potiron</h4>
+                        <h3>Homard et espuma de potiron</h3>
                         <p>Marinés aux zestes d'orange</p>
                     </div>
                     <span>20€</span>
@@ -60,7 +62,7 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Foie gras de canard cuit entier</h4>
+                        <h3>Foie gras de canard cuit entier</h3>
                         <p>Confiture de figue et pain toasté</p>
                     </div>
                     <span>35€</span>
@@ -69,11 +71,11 @@
             </div>
 
             <div class="section_menu">
-                <h3>PLATS</h3>
+                <h2>PLATS</h2>
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Noix de coquilles Saint-Jacques</h4>
+                        <h3>Noix de coquilles Saint-Jacques</h3>
                         <p>Sur lit de purée de céleri-rave</p>
                     </div>
                     <span>40€</span>
@@ -82,7 +84,7 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Langoustine poêlée</h4>
+                        <h3>Langoustine poêlée</h3>
                         <p>Purée de patate douce</p>
                     </div>
                     <span>35€</span>
@@ -91,7 +93,7 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Mijoté de queue de bœuf </h4>
+                        <h3>Mijoté de queue de bœuf </h3>
                         <p>Et riz sauvage aux zestes de citron</p>
                     </div>
                     <span>45€</span>
@@ -100,11 +102,11 @@
             </div>
 
             <div class="section_menu">
-                <h3>DESSERTS</h3>
+                <h2>DESSERTS</h2>
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Macaron noisette et chocolat</h4>
+                        <h3>Macaron noisette et chocolat</h3>
                         <p>Glace au caramel brun et sel de Guérande</p>
                     </div>
                     <span>18€</span>
@@ -113,7 +115,7 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Baba au rhum revisité </h4>
+                        <h3>Baba au rhum revisité </h3>
                         <p>Avec son coulis de citron</p>
                     </div>
                     <span>22€</span>
@@ -122,7 +124,7 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Tarte au citron meringuée </h4>
+                        <h3>Tarte au citron meringuée </h3>
                         <p>Déstructurée</p>
                     </div>
                     <span>23€</span>
@@ -133,15 +135,24 @@
         <button class="commander">Commander</button>
     </main>
     <footer>
-        <img src="./assets/images/logo/ohmyfood@2x.svg">
-        <i class="fa-solid fa-utensils"></i>
-        <p class="restaurant_partenaire">Proposer un restaurant</p>
-
-        <i class="fa-solid fa-handshake-angle"></i>
-        <p class="restaurant_partenaire">Devenir partenaire</p>
-        
-        <p>Mentions légales</p>
-        <p>Contact</p>
+        <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+        <ul>
+            <li>
+                <i class="fa-solid fa-utensils"></i>
+                <p class="restaurant_partenaire">Proposer un restaurant</p>
+            </li>
+            <li>
+                <i class="fa-solid fa-handshake-angle"></i>
+                <p class="restaurant_partenaire">Devenir partenaire</p>
+            </li>
+            <li>
+                <p>Mentions légales</p>
+            </li>
+            <li>
+                <p>Contact</p>
+            </li>
+        </ul>
     </footer>
 </body>
+
 </html>
