--- a/restaurants pages/le_delice_des_sens.html
+++ b/restaurants pages/le_delice_des_sens.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,26 +15,27 @@
     <link href="./assets/css/style.css" rel="stylesheet">
     <title>Le délice des sens</title>
 </head>
+
 <body>
     <header>
-        <img src="./assets/images/logo/ohmyfood.png">
-        <!--logo ou fleche en css-->
+        <i class="fa-solid fa-arrow-left"></i>
+        <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
     </header>
     <main>
         <img src="../assets/images/restaurants/Le délice des sens.jpg" alt="Photo du restaurant Le délice des sens">
         <section class="menu">
             <div class="conteneur_coeur">
-                <h2>À la française</h2> <!--quel h choisir en fonction du logo ou non-->
+                <h1>À la française</h1>
                 <i class="fa-regular fa-heart coeur_vide"></i>
                 <i class="fa-solid fa-heart coeur_plein"></i>
             </div>
 
             <div class="section_menu">
-                <h3>ENTRÉES</h3>
+                <h2>ENTRÉES</h2>
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Tartare de thon</h4>
+                        <h3>Tartare de thon</h3>
                         <p>Assaisonné au yuzu</p>
                     </div>
                     <span>25€</span>
@@ -42,7 +44,7 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Bouchée de homard croustillant </h4>
+                        <h3>Bouchée de homard croustillant </h3>
                         <p>Et sa farandole de petits légumes</p>
                     </div>
                     <span>35€</span>
@@ -51,7 +53,7 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Poulet rôti aux herbes de Provence </h4>
+                        <h3>Poulet rôti aux herbes de Provence </h3>
                         <p>Et sa crème de truffe</p>
                     </div>
                     <span>40€</span>
@@ -60,11 +62,11 @@
             </div>
 
             <div class="section_menu">
-                <h3>PLATS</h3>
+                <h2>PLATS</h2>
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Poulet rôti aux herbes de Provence </h4>
+                        <h3>Poulet rôti aux herbes de Provence </h3>
                         <p>Et sa crème de truffe</p>
                     </div>
                     <span>40€</span>
@@ -73,7 +75,7 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Langouste rôtie </h4>
+                        <h3>Langouste rôtie </h3>
                         <p>Et ses légumes de saison</p>
                     </div>
                     <span>35€</span>
@@ -82,7 +84,7 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Côte de bœuf Angus </h4>
+                        <h3>Côte de bœuf Angus </h3>
                         <p>Et sa purée de panais</p>
                     </div>
                     <span>44€</span>
@@ -91,11 +93,11 @@
             </div>
 
             <div class="section_menu">
-                <h3>DESSERTS</h3>
+                <h2>DESSERTS</h2>
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Farandole de desserts</h4>
+                        <h3>Farandole de desserts</h3>
                         <p>Du chef</p>
                     </div>
                     <span>18€</span>
@@ -104,7 +106,7 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Crème brulée </h4>
+                        <h3>Crème brulée </h3>
                         <p>Revisitée</p>
                     </div>
                     <span>22€</span>
@@ -113,7 +115,7 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Tiramisu</h4>
+                        <h3>Tiramisu</h3>
                         <p>À la noisette</p>
                     </div>
                     <span>23€</span>
@@ -124,15 +126,24 @@
         <button class="commander">Commander</button>
     </main>
     <footer>
-        <img src="./assets/images/logo/ohmyfood@2x.svg">
-        <i class="fa-solid fa-utensils"></i>
-        <p class="restaurant_partenaire">Proposer un restaurant</p>
-
-        <i class="fa-solid fa-handshake-angle"></i>
-        <p class="restaurant_partenaire">Devenir partenaire</p>
-        
-        <p>Mentions légales</p>
-        <p>Contact</p>
+        <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+        <ul>
+            <li>
+                <i class="fa-solid fa-utensils"></i>
+                <p class="restaurant_partenaire">Proposer un restaurant</p>
+            </li>
+            <li>
+                <i class="fa-solid fa-handshake-angle"></i>
+                <p class="restaurant_partenaire">Devenir partenaire</p>
+            </li>
+            <li>
+                <p>Mentions légales</p>
+            </li>
+            <li>
+                <p>Contact</p>
+            </li>
+        </ul>
     </footer>
 </body>
+
 </html>
