--- a/restaurants pages/a_la_française.html
+++ b/restaurants pages/a_la_française.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,26 +15,27 @@
     <link href="./assets/css/style.css" rel="stylesheet">
     <title>À la française</title>
 </head>
+
 <body>
     <header>
-        <img src="./assets/images/logo/ohmyfood.png">
-        <!--logo ou fleche en css-->
+        <i class="fa-solid fa-arrow-left"></i>
+        <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
     </header>
     <main>
         <img src="../assets/images/restaurants/A la française.jpg" alt="Photo du restaurant A la française">
         <section class="menu">
             <div class="conteneur_coeur">
-                <h2>À la française</h2> <!--quel h choisir en fonction du logo ou non-->
+                <h1>À la française</h1>
                 <i class="fa-regular fa-heart coeur_vide"></i>
                 <i class="fa-solid fa-heart coeur_plein"></i>
             </div>
 
             <div class="section_menu">
-                <h3>ENTRÉES</h3>
+                <h2>ENTRÉES</h2>
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Tartare de poulpe acidulé</h4>
+                        <h3>Tartare de poulpe acidulé</h3>
                         <p>Aux zestes d'orange</p>
                     </div>
                     <span>25€</span>
@@ -42,7 +44,7 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Velouté de légumes d'antan</h4>
+                        <h3>Velouté de légumes d'antan</h3>
                         <p>Carotte, panais, topinambour</p>
                     </div>
                     <span>35€</span>
@@ -51,7 +53,7 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Soupe à l'oignon</h4>
+                        <h3>Soupe à l'oignon</h3>
                         <p>Revisitée</p>
                     </div>
                     <span>20€</span>
@@ -60,11 +62,11 @@
             </div>
 
             <div class="section_menu">
-                <h3>PLATS</h3>
+                <h2>PLATS</h2>
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Coquilles Saint-Jacques</h4>
+                        <h3>Coquilles Saint-Jacques</h3>
                         <p>Accompagnées d'une purée de panais</p>
                     </div>
                     <span>40€</span>
@@ -73,7 +75,7 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Magret de canard</h4>
+                        <h3>Magret de canard</h3>
                         <p>Et parmentier de pommes de terre</p>
                     </div>
                     <span>35€</span>
@@ -82,7 +84,7 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Pigeonneau d’Ille-et-Vilaine</h4>
+                        <h3>Pigeonneau d’Ille-et-Vilaine</h3>
                         <p>Sur son lit de gnocchis aux légumes</p>
                     </div>
                     <span>44€</span>
@@ -91,11 +93,11 @@
             </div>
 
             <div class="section_menu">
-                <h3>DESSERTS</h3>
+                <h2>DESSERTS</h2>
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Pétales de violettes glacés</h4>
+                        <h3>Pétales de violettes glacés</h3>
                         <p>Et purée de noisettes</p>
                     </div>
                     <span>18€</span>
@@ -104,7 +106,7 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Fondant au chocolat</h4>
+                        <h3>Fondant au chocolat</h3>
                         <p>Revisité</p>
                     </div>
                     <span>22€</span>
@@ -113,7 +115,7 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Millefeuille croustillant</h4>
+                        <h3>Millefeuille croustillant</h3>
                         <p>Myrtilles et pâte d’amande</p>
                     </div>
                     <span>23€</span>
@@ -124,15 +126,24 @@
         <button class="commander">Commander</button>
     </main>
     <footer>
-        <img src="./assets/images/logo/ohmyfood@2x.svg">
-        <i class="fa-solid fa-utensils"></i>
-        <p class="restaurant_partenaire">Proposer un restaurant</p>
-
-        <i class="fa-solid fa-handshake-angle"></i>
-        <p class="restaurant_partenaire">Devenir partenaire</p>
-        
-        <p>Mentions légales</p>
-        <p>Contact</p>
+        <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+        <ul>
+            <li>
+                <i class="fa-solid fa-utensils"></i>
+                <p class="restaurant_partenaire">Proposer un restaurant</p>
+            </li>
+            <li>
+                <i class="fa-solid fa-handshake-angle"></i>
+                <p class="restaurant_partenaire">Devenir partenaire</p>
+            </li>
+            <li>
+                <p>Mentions légales</p>
+            </li>
+            <li>
+                <p>Contact</p>
+            </li>
+        </ul>
     </footer>
 </body>
+
 </html>
