--- a/restaurants pages/la_palette_du_gout.html
+++ b/restaurants pages/la_palette_du_gout.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,26 +15,27 @@
     <link href="./assets/css/style.css" rel="stylesheet">
     <title>La palette du goût</title>
 </head>
+
 <body>
     <header>
-        <img src="./assets/images/logo/ohmyfood.png">
-        <!--logo ou fleche en css-->
+        <i class="fa-solid fa-arrow-left"></i>
+        <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
     </header>
     <main>
         <img src="../assets/images/restaurants/la palette du goût.jpg" alt="Photo du restaurant La palette du goût">
         <section class="menu">
             <div class="conteneur_coeur">
-                <h2>À la française</h2> <!--quel h choisir en fonction du logo ou non-->
+                <h1>À la française</h1>
                 <i class="fa-regular fa-heart coeur_vide"></i>
                 <i class="fa-solid fa-heart coeur_plein"></i>
             </div>
 
             <div class="section_menu">
-                <h3>ENTRÉES</h3>
+                <h2>ENTRÉES</h2>
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Fricassée d'escargots</h4>
+                        <h3>Fricassée d'escargots</h3>
                         <p>Au piment d'Espelette</p>
                     </div>
                     <span>25€</span>
@@ -42,7 +44,7 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Foie gras de canard mi-cuit</h4>
+                        <h3>Foie gras de canard mi-cuit</h3>
                         <p>Et ses copeaux de truffe noir</p>
                     </div>
                     <span>35€</span>
@@ -51,7 +53,7 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Oeuf au plat</h4>
+                        <h3>Oeuf au plat</h3>
                         <p>Assaisonné à la truffe sur le lit de caviar</p>
                     </div>
                     <span>20€</span>
@@ -60,11 +62,11 @@
             </div>
 
             <div class="section_menu">
-                <h3>PLATS</h3>
+                <h2>PLATS</h2>
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Filet de boeuf aux herbes</h4>
+                        <h3>Filet de boeuf aux herbes</h3>
                         <p>Accompagné de sa ribambelle de légumes</p>
                     </div>
                     <span>40€</span>
@@ -73,7 +75,7 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Parmentier de queue de boeuf</h4>
+                        <h3>Parmentier de queue de boeuf</h3>
                         <p>À la truffe noire sur sa purée de panais</p>
                     </div>
                     <span>35€</span>
@@ -82,7 +84,7 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Filet de turbot</h4>
+                        <h3>Filet de turbot</h3>
                         <p>Aux agrumes</p>
                     </div>
                     <span>44€</span>
@@ -91,11 +93,11 @@
             </div>
 
             <div class="section_menu">
-                <h3>DESSERTS</h3>
+                <h2>DESSERTS</h2>
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Paris-Brest</h4>
+                        <h3>Paris-Brest</h3>
                         <p>Revisité</p>
                     </div>
                     <span>18€</span>
@@ -104,7 +106,7 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Macaron au chocolat d'exception </h4>
+                        <h3>Macaron au chocolat d'exception </h3>
                         <p>Et glace à la vanille de Madagascar</p>
                     </div>
                     <span>22€</span>
@@ -113,7 +115,7 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Mousse au chocolat</h4>
+                        <h3>Mousse au chocolat</h3>
                         <p>Au piment d'Espelette et à la truffe noire</p>
                     </div>
                     <span>23€</span>
@@ -124,15 +126,24 @@
         <button class="commander">Commander</button>
     </main>
     <footer>
-        <img src="./assets/images/logo/ohmyfood@2x.svg">
-        <i class="fa-solid fa-utensils"></i>
-        <p class="restaurant_partenaire">Proposer un restaurant</p>
-
-        <i class="fa-solid fa-handshake-angle"></i>
-        <p class="restaurant_partenaire">Devenir partenaire</p>
-        
-        <p>Mentions légales</p>
-        <p>Contact</p>
+        <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+        <ul>
+            <li>
+                <i class="fa-solid fa-utensils"></i>
+                <p class="restaurant_partenaire">Proposer un restaurant</p>
+            </li>
+            <li>
+                <i class="fa-solid fa-handshake-angle"></i>
+                <p class="restaurant_partenaire">Devenir partenaire</p>
+            </li>
+            <li>
+                <p>Mentions légales</p>
+            </li>
+            <li>
+                <p>Contact</p>
+            </li>
+        </ul>
     </footer>
 </body>
+
 </html>
