CSS Homepage et restaurants

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="./assets/css/style.css" rel="stylesheet">
+    <link href="./assets/css/styles.css" rel="stylesheet">
     <title>Ohmyfood</title>
 </head>
 
@@ -28,13 +28,13 @@
         <section class="presentation">
             <h1>Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'éxcepetion, selectionnés par nos soins</p>
-            <a href="#restaurants">Explorer nos restaurants</a>
+            <button><a href="#restaurants">Explorer nos restaurants</a></button>
         </section>
         <section class="fonctionnement">
             <h2>Fonctionnement</h2>
-            <ul>
+            <ol>
                 <li>
-                    <i class="fa-solid fa-mobile-screen-button"></i>
+                    <i class="fa-solid fa-mobile-screen-button fa-lg"></i>
                     <p>Choisissez un restaurant</p>
                 </li>
                 <li>
@@ -45,7 +45,7 @@
                     <i class="fa-solid fa-store"></i>
                     <p>Dégustez au restaurant</p>
                 </li>
-            </ul>
+            </ol>
         </section>
         <section class="restaurants">
             <h2>Restaurants</h2>
@@ -116,11 +116,11 @@
         <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
         <ul>
             <li>
-                <i class="fa-solid fa-utensils"></i>
+                <i class="fa-solid fa-utensils fa-sm"></i>
                 <p class="restaurant_partenaire">Proposer un restaurant</p>
             </li>
             <li>
-                <i class="fa-solid fa-handshake-angle"></i>
+                <i class="fa-solid fa-handshake-angle fa-2xs"></i>
                 <p class="restaurant_partenaire">Devenir partenaire</p>
             </li>
             <li>
