--- a/restaurants pages/la_palette_du_gout.html
+++ b/restaurants pages/la_palette_du_gout.html
@@ -12,22 +12,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="./assets/css/style.css" rel="stylesheet">
+    <link href="../assets/css/styles.css" rel="stylesheet">
     <title>La palette du goût</title>
 </head>
 
 <body>
     <header>
-        <i class="fa-solid fa-arrow-left"></i>
-        <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+        <a href="../index.html"><i class="fa-solid fa-arrow-left fa-xl"></i></a>
+        <img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
     </header>
     <main>
         <img src="../assets/images/restaurants/la palette du goût.jpg" alt="Photo du restaurant La palette du goût">
         <section class="menu">
             <div class="conteneur_coeur">
-                <h1>À la française</h1>
-                <i class="fa-regular fa-heart coeur_vide"></i>
-                <i class="fa-solid fa-heart coeur_plein"></i>
+                <h1>La palette du goût</h1>
+                <i class="fa-regular fa-heart coeur_vide fa-xl"></i>
+                <i class="fa-solid fa-heart coeur_plein fa-xl"></i>
             </div>
 
             <div class="section_menu">
@@ -122,11 +122,11 @@
                     <div class="check"><i class="fa-solid fa-check"></i></div>
                 </article>
             </div>
+            <button class="commander"><p>Commander</p></button>
         </section>
-        <button class="commander">Commander</button>
     </main>
     <footer>
-        <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+        <img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
         <ul>
             <li>
                 <i class="fa-solid fa-utensils"></i>
