MAJ CSS, carte restaurant + nouveau

--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
             <h2>Fonctionnement</h2>
             <ol>
                 <li>
-                    <i class="fa-solid fa-mobile-screen-button fa-lg"></i>
+                    <i class="fa-solid fa-mobile-screen-button fa-sm"></i>
                     <p>Choisissez un restaurant</p>
                 </li>
                 <li>
-                    <i class="fa-sharp fa-solid fa-list-ul"></i>
+                    <i class="fa-sharp fa-solid fa-list-ul fa-sm"></i>
                     <p>Composez votre menu</p>
                 </li>
                 <li>
-                    <i class="fa-solid fa-store"></i>
+                    <i class="fa-solid fa-store fa-xs"></i>
                     <p>Dégustez au restaurant</p>
                 </li>
             </ol>
