--- a/restaurants pages/la_note_enchantee.html
+++ b/restaurants pages/la_note_enchantee.html
@@ -25,7 +25,7 @@
         <img src="../assets/images/restaurants/La note enchantée.jpg" alt="Photo du restaurant La note enchantée">
         <section class="menu">
             <div class="conteneur_coeur">
-                <h1>À la française</h1>
+                <h1>La note enchantée</h1>
                 <i class="fa-regular fa-heart coeur_vide fa-xl"></i>
                 <i class="fa-solid fa-heart coeur_plein fa-xl"></i>
             </div>
