--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <ol>
                 <li>
                     <i class="fa-solid fa-mobile-screen-button fa-sm"></i>
-                    <p>Choisissez un restaurant</p>
+                    <span><p>Choisissez un restaurant</p></span>
                 </li>
                 <li>
                     <i class="fa-sharp fa-solid fa-list-ul fa-sm"></i>
@@ -48,67 +48,69 @@
             </ol>
         </section>
         <section class="restaurants">
-            <h2>Restaurants</h2>
-            <div class="liste_cartes">
-                <article class="carte_restaurant nouveau">
-                    <a href="./restaurants pages/la_palette_du_gout.html">
-                        <img src="./assets/images/restaurants/la palette du goût.jpg"
-                            alt="Photo du restaurant La palette du goût">
-                        <div class="description_carte">
-                            <h3>La palette du goût</h3>
-                            <p>Ménilmontant</p>
+            <div class="restaurant__container">
+                <h2>Restaurants</h2>
+                <div class="liste_cartes">
+                    <article class="carte_restaurant nouveau">
+                        <a href="./restaurants pages/la_palette_du_gout.html">
+                            <img src="./assets/images/restaurants/la palette du goût.jpg"
+                                alt="Photo du restaurant La palette du goût">
+                            <div class="description_carte">
+                                <h3>La palette du goût</h3>
+                                <p>Ménilmontant</p>
+                            </div>
+                        </a>
+                        <div class="logo_coeur">
+                            <i class="fa-regular fa-heart coeur_vide"></i>
+                            <i class="fa-solid fa-heart coeur_plein"></i>
                         </div>
-                    </a>
-                    <div class="logo_coeur">
-                        <i class="fa-regular fa-heart coeur_vide"></i>
-                        <i class="fa-solid fa-heart coeur_plein"></i>
-                    </div>
-                </article>
+                    </article>
 
-                <article class="carte_restaurant nouveau">
-                    <a href="./restaurants pages/la_note_enchantee.html">
-                        <img src="./assets/images/restaurants/La note enchantée.jpg"
-                            alt="Photo du restaurant La note enchantée">
-                        <div class="description_carte">
-                            <h3>La note enchantée</h3>
-                            <p>Charonne</p>
+                    <article class="carte_restaurant nouveau">
+                        <a href="./restaurants pages/la_note_enchantee.html">
+                            <img src="./assets/images/restaurants/La note enchantée.jpg"
+                                alt="Photo du restaurant La note enchantée">
+                            <div class="description_carte">
+                                <h3>La note enchantée</h3>
+                                <p>Charonne</p>
+                            </div>
+                        </a>
+                        <div class="logo_coeur">
+                            <i class="fa-regular fa-heart coeur_vide"></i>
+                            <i class="fa-solid fa-heart coeur_plein"></i>
                         </div>
-                    </a>
-                    <div class="logo_coeur">
-                        <i class="fa-regular fa-heart coeur_vide"></i>
-                        <i class="fa-solid fa-heart coeur_plein"></i>
-                    </div>
-                </article>
+                    </article>
 
-                <article class="carte_restaurant">
-                    <a href="./restaurants pages/a_la_française.html">
-                        <img src="./assets/images/restaurants/A la française.jpg"
-                            alt="Photo du restaurant À la française">
-                        <div class="description_carte">
-                            <h3>À la française</h3>
-                            <p>Cité Rouge</p>
+                    <article class="carte_restaurant">
+                        <a href="./restaurants pages/a_la_française.html">
+                            <img src="./assets/images/restaurants/A la française.jpg"
+                                alt="Photo du restaurant À la française">
+                            <div class="description_carte">
+                                <h3>À la française</h3>
+                                <p>Cité Rouge</p>
+                            </div>
+                        </a>
+                        <div class="logo_coeur">
+                            <i class="fa-regular fa-heart coeur_vide"></i>
+                            <i class="fa-solid fa-heart coeur_plein"></i>
                         </div>
-                    </a>
-                    <div class="logo_coeur">
-                        <i class="fa-regular fa-heart coeur_vide"></i>
-                        <i class="fa-solid fa-heart coeur_plein"></i>
-                    </div>
-                </article>
+                    </article>
 
-                <article class="carte_restaurant">
-                    <a href="./restaurants pages/le_delice_des_sens.html">
-                        <img src="./assets/images/restaurants/Le délice des sens.jpg"
-                            alt="Photo du restaurant Le délice des sens">
-                        <div class="description_carte">
-                            <h3>Le délice des sens</h3>
-                            <p>Folie-Méricourt</p>
+                    <article class="carte_restaurant">
+                        <a href="./restaurants pages/le_delice_des_sens.html">
+                            <img src="./assets/images/restaurants/Le délice des sens.jpg"
+                                alt="Photo du restaurant Le délice des sens">
+                            <div class="description_carte">
+                                <h3>Le délice des sens</h3>
+                                <p>Folie-Méricourt</p>
+                            </div>
+                        </a>
+                        <div class="logo_coeur">
+                            <i class="fa-regular fa-heart coeur_vide"></i>
+                            <i class="fa-solid fa-heart coeur_plein"></i>
                         </div>
-                    </a>
-                    <div class="logo_coeur">
-                        <i class="fa-regular fa-heart coeur_vide"></i>
-                        <i class="fa-solid fa-heart coeur_plein"></i>
-                    </div>
-                </article>
+                    </article>
+                </div>
             </div>
         </section>
     </main>
@@ -127,7 +129,7 @@
                 <p>Mentions légales</p>
             </li>
             <li>
-                <p>Contact</p>
+                <p><a href="mailto:contact@ohmyfood.com">Contact</a></p>
             </li>
         </ul>
     </footer>
