--- a/restaurants pages/a_la_française.html
+++ b/restaurants pages/a_la_française.html
@@ -126,7 +126,7 @@
         </section>
     </main>
     <footer>
-        <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+        <img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
         <ul>
             <li>
                 <i class="fa-solid fa-utensils"></i>
@@ -140,7 +140,7 @@
                 <p>Mentions légales</p>
             </li>
             <li>
-                <p>Contact</p>
+                <p><a href="mailto:contact@ohmyfood.com">Contact</a></p>
             </li>
         </ul>
     </footer>
