--- a/restaurants pages/la_note_enchantee.html
+++ b/restaurants pages/la_note_enchantee.html
@@ -35,7 +35,7 @@
 
                 <article class="intitule_plat">
                     <div class="description_carte">
-                        <h4>Ravioles de foie gras </h4>
+                        <h3>Ravioles de foie gras </h3>
                         <p>Accompagnées de leur crème à la truffe</p>
                     </div>
                     <span>25€</span>
@@ -149,7 +149,7 @@
                 <p>Mentions légales</p>
             </li>
             <li>
-                <p>Contact</p>
+                <p><a href="mailto:contact@ohmyfood.com">Contact</a></p>
             </li>
         </ul>
     </footer>
