--- a/restaurants pages/le_delice_des_sens.html
+++ b/restaurants pages/le_delice_des_sens.html
@@ -25,7 +25,7 @@
         <img src="../assets/images/restaurants/Le délice des sens.jpg" alt="Photo du restaurant Le délice des sens">
         <section class="menu">
             <div class="conteneur_coeur">
-                <h1>À la française</h1>
+                <h1>Le délice des des sens</h1>
                 <i class="fa-regular fa-heart coeur_vide fa-xl"></i>
                 <i class="fa-solid fa-heart coeur_plein fa-xl"></i>
             </div>
@@ -140,7 +140,7 @@
                 <p>Mentions légales</p>
             </li>
             <li>
-                <p>Contact</p>
+                <p><a href="mailto:contact@ohmyfood.com">Contact</a></p>
             </li>
         </ul>
     </footer>
