--- a/restaurants pages/la_palette_du_gout.html
+++ b/restaurants pages/la_palette_du_gout.html
@@ -29,8 +29,9 @@
                 <i class="fa-regular fa-heart coeur_vide fa-xl"></i>
                 <i class="fa-solid fa-heart coeur_plein fa-xl"></i>
             </div>
-
+    
             <div class="section_menu">
+                
                 <h2>ENTRÉES</h2>
 
                 <article class="intitule_plat">
@@ -122,7 +123,9 @@
                     <div class="check"><i class="fa-solid fa-check"></i></div>
                 </article>
             </div>
-            <button class="commander"><p>Commander</p></button>
+            <button class="commander">
+                <p>Commander</p>
+            </button>
         </section>
     </main>
     <footer>
@@ -140,7 +143,7 @@
                 <p>Mentions légales</p>
             </li>
             <li>
-                <p>Contact</p>
+                <p><a href="mailto:contact@ohmyfood.com">Contact</a></p>
             </li>
         </ul>
     </footer>
